Fixed bullets showing up on search results on Firefox

--- a/public/css/main.css
+++ b/public/css/main.css
@@ -658,6 +658,7 @@ footer nav li{
     padding: 33px 10px 33px 33px;
     background: url('/images/tinyborder_entry.png') center top no-repeat;
     font-size: 100%;
+    list-style-type: none;
 }
 .results.contentArea.right li:hover{
     background-color: #f5f6f5;
@@ -702,6 +703,7 @@ time.item, .entry time, .time {
     font-size: 93%;
     margin-top: 10px;
 }
+
 .item time{
     margin-top: 4px;
     font-style: italic;
